--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <ul class="menu">
             <li class="menu__item"><a href="#" class="menu__link">Home</a></li>
             <li class="menu__item"><a href="#" class="menu__link">About us</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Services</a></li>
+            <li class="menu__item"><a href="#servicios" class="menu__link">Services</a></li>
             <li class="menu__item"><a href="#" class="menu__link">Blog</a></li>
             <li class="menu__item"><a href="#" class="menu__link">Contacts</a></li>
           </ul>
@@ -78,19 +78,19 @@
         </div>
         <div class="caja">
           <div class="cliente"><img src="http://lorempixel.com/300/200" class="cliente__img">
-            <h3 class="clientes__titulo">Cliente I</h3>
+            <h3 class="cliente__titulo">Cliente I</h3>
             <p class="cliente__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!</p>
           </div>
         </div>
         <div class="caja">
           <div class="cliente"><img src="http://lorempixel.com/300/200" class="cliente__img">
-            <h3 class="clientes__titulo">Cliente II</h3>
+            <h3 class="cliente__titulo">Cliente II</h3>
             <p class="cliente__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!</p>
           </div>
         </div>
         <div class="caja">
           <div class="cliente"><img src="http://lorempixel.com/300/200" class="cliente__img">
-            <h3 class="clientes__titulo">Cliente III</h3>
+            <h3 class="cliente__titulo">Cliente III</h3>
             <p class="cliente__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!</p>
           </div>
         </div>
