anado iconos sociales , ajuste de imagenes con columnas totalmente responsive en mobile y tablet

--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
     </header>
     <section id="servicios">
       <div class="grupo">
-        <div class="caja">
+        <div class="caja total">
           <h2 class="section-title">Services <span>What we offer to our clients!</span></h2>
         </div>
-        <div class="caja">
+        <div class="caja tablet-1-3"> 
           <div class="servicio"><img src="http://lorempixel.com/640/640" class="servicio__img">
             <h3 class="servicio__title">Hair Transplantation</h3>
             <p class="servicio__description">  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nisi id laborum non, a nemo ipsum sapiente at aliquid nam earum nihil repudiandae natus eligendi obcaecati voluptatum. Ab consectetur, quia! </p>
           </div>
         </div>
-        <div class="caja">
+        <div class="caja tablet-1-3">  
           <div class="servicio"><img src="http://lorempixel.com/640/640" class="servicio__img">
             <h3 class="servicio__title">Medical Treatments</h3>
             <p class="servicio__description">  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat tempore asperiores, ea iure recusandae ipsa illo alias eius possimus inventore repellat sit autem, facilis dignissimos quam magnam ab, esse distinctio.</p>
           </div>
         </div>
-        <div class="caja">
+        <div class="caja tablet-1-3"> 
           <div class="servicio"><img src="http://lorempixel.com/640/640" class="servicio__img">
             <h3 class="servicio__title">Eyebrow Transplantation</h3>
-            <p class="servicio__description">  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, maxime repellat quae unde, quibusdam obcaecati ullam eum ipsa expedita nam adipisci, laudantium tempora eos magni! Nihil molestias quis, unde earum.</p>
+            <p class="servicio__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis sequi cupiditate ducimus non, animi ipsam cumque sed voluptatem, asperiores eos recusandae. Aperiam id maiores commodi at, ea doloremque.</p>
           </div>
         </div>
       </div>
@@ -98,19 +98,19 @@
     </section>
     <section id="noticias">
       <div class="grupo">
-        <div class="caja">
+        <div class="caja tablet-1-3">
           <div class="noticia">
             <h3 class="noticia__title">Hair Transplants <span>Vestibulum lacults </span></h3><img src="http://lorempixel.com/600/400" class="noticia__img">
             <p class="noticia__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam blanditiis perferendis voluptate ex eum reprehenderit harum ducimus dolorum, magni porro alias iusto deleniti magnam, libero quas, beatae aperiam earum ipsam.</p>
           </div>
         </div>
-        <div class="caja">
+        <div class="caja tablet-1-3">
           <div class="noticia">
             <h3 class="noticia__title">Women's hair loss <span>Vestibulum lacults </span></h3><img src="http://lorempixel.com/600/400" class="noticia__img">
             <p class="noticia__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam blanditiis perferendis voluptate ex eum reprehenderit harum ducimus dolorum, magni porro alias iusto deleniti magnam, libero quas, beatae aperiam earum ipsam.</p>
           </div>
         </div>
-        <div class="caja">
+        <div class="caja tablet-1-3">
           <div class="noticia">
             <h3 class="noticia__title">Men's hair loss<span>Vestibulum lacults </span></h3><img src="http://lorempixel.com/600/400" class="noticia__img">
             <p class="noticia__description">  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores in sint cumque aut officia temporibus, ad eum pariatur, perferendis illum. Qui similique quaerat nam eius praesentium vitae pariatur. Eum, esse!</p>
@@ -120,11 +120,11 @@
     </section>
     <section id="footer">
       <div class="grupo">
-        <div class="caja">
+        <div class="caja tablet-50">
           <p class="creditos">Hair Doctor &copy; 2014 | Privace Policy </p>
         </div>
-        <div class="caja">
-          <div class="sociales"><a href="#" class="sociales__item"></a><a href="#" class="sociales__item"> </a><a href="#" class="sociales__item"></a><a href="#" class="sociales__item"></a><a href="#" class="sociales__item"></a></div>
+        <div class="caja tablet-50">
+          <div class="sociales"><a href="#" class="sociales__item icon-facebook"></a><a href="#" class="sociales__item icon-twitter"> </a><a href="#" class="sociales__item icon-youtube"></a><a href="#" class="sociales__item icon-linkedin"></a><a href="#" class="sociales__item icon-rss"></a></div>
         </div>
       </div>
     </section>
