Clientes desde web 4 columnas

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <section id="clientes">
       <div class="grupo">
-        <div class="caja">
+        <div class="caja web-25"> 
           <div class="clientes">
             <h2 class="clientes__titulo">This is the list of our recent clients</h2>
             <div class="clientes__nav">
@@ -76,19 +76,19 @@
             </div>
           </div>
         </div>
-        <div class="caja">
+        <div class="caja web-25"> 
           <div class="cliente"><img src="http://lorempixel.com/600/400" class="cliente__img">
             <h3 class="cliente__titulo">Cliente I</h3>
             <p class="cliente__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!</p>
           </div>
         </div>
-        <div class="caja">
+        <div class="caja web-25"> 
           <div class="cliente"><img src="http://lorempixel.com/600/400" class="cliente__img">
             <h3 class="cliente__titulo">Cliente II</h3>
             <p class="cliente__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!</p>
           </div>
         </div>
-        <div class="caja">
+        <div class="caja web-25"> 
           <div class="cliente"><img src="http://lorempixel.com/600/400" class="cliente__img">
             <h3 class="cliente__titulo">Cliente III</h3>
             <p class="cliente__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!</p>
@@ -113,7 +113,7 @@
         <div class="caja tablet-1-3">
           <div class="noticia">
             <h3 class="noticia__title">Men's hair loss<span>Vestibulum lacults </span></h3><img src="http://lorempixel.com/600/400" class="noticia__img">
-            <p class="noticia__description">  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores in sint cumque aut officia temporibus, ad eum pariatur, perferendis illum. Qui similique quaerat nam eius praesentium vitae pariatur. Eum, esse!</p>
+            <p class="noticia__description">  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores in sint cumque aut officia temporibus, ad eum 	pariatur, perferendis illum. Qui similique quaerat nam eius praesentium vitae pariatur. Eum, esse!</p>
           </div>
         </div>
       </div>
