Hair Doctor web terminado , totalmente responsive

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <body>
     <header id="header">
       <div class="grupo">
-        <div class="caja">
+        <div class="caja web-30">
           <h2 class="logo">Hair <span>Doctor </span></h2>
           <p class="subtitle">
             A permanent hair loss solution
             
           </p>
         </div>
-        <div class="caja">
+        <div class="caja web-70">
           <div id="mostrar-menu">Menu</div>
           <ul class="menu">
             <li class="menu__item"><a href="#" class="menu__link">Home</a></li>
@@ -31,7 +31,7 @@
       </div>
       <div class="grupo">
         <div class="caja">
-          <div class="banner"><img src="http://lorempixel.com/1000/450" alt="">
+          <div class="banner"><img src="http://escueladigital.pe/labs/hair-doctor/img/banner.jpg" alt="">
             <div class="copy">
               <h2 class="copy__title">Effective <span>Hair Restoration</span></h2>
               <p class="copy__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe quos quam veritatis modi. Saepe dicta perferendis numquam placeat, molestiae, ipsam! Asperiores sunt perferendis, modi qui iste est! Nihil, saepe ratione. </p><a href="#" class="copy__button">more</a>
@@ -101,13 +101,13 @@
         <div class="caja tablet-1-3">
           <div class="noticia">
             <h3 class="noticia__title">Hair Transplants <span>Vestibulum lacults </span></h3><img src="http://lorempixel.com/600/400" class="noticia__img">
-            <p class="noticia__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam blanditiis perferendis voluptate ex eum reprehenderit harum ducimus dolorum, magni porro alias iusto deleniti magnam, libero quas, beatae aperiam earum ipsam.</p>
+            <p class="noticia__description">  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores in sint cumque aut officia temporibus, ad eum 	pariatur, perferendis illum. Qui similique quaerat nam eius praesentium vitae pariatur. Eum, esse!</p>
           </div>
         </div>
         <div class="caja tablet-1-3">
           <div class="noticia">
             <h3 class="noticia__title">Women's hair loss <span>Vestibulum lacults </span></h3><img src="http://lorempixel.com/600/400" class="noticia__img">
-            <p class="noticia__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam blanditiis perferendis voluptate ex eum reprehenderit harum ducimus dolorum, magni porro alias iusto deleniti magnam, libero quas, beatae aperiam earum ipsam.</p>
+            <p class="noticia__description">  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores in sint cumque aut officia temporibus, ad eum 	pariatur, perferendis illum. Qui similique quaerat nam eius praesentium vitae pariatur. Eum, esse!</p>
           </div>
         </div>
         <div class="caja tablet-1-3">
